# cockroach

./: Makefile  WORKSPACE
.github/workflows/: crdb-api-client-npm-publish.yml
pkg/ccl/logictestccl/tests/3node-tenant/: generated_test.go
pkg/ccl/logictestccl/tests/fakedist/: generated_test.go
pkg/ccl/logictestccl/tests/fakedist-disk/: generated_test.go
pkg/ccl/logictestccl/tests/fakedist-vec-off/: generated_test.go
pkg/ccl/logictestccl/tests/local/: generated_test.go
pkg/ccl/logictestccl/tests/local-legacy-schema-changer/: generated_test.go
pkg/ccl/logictestccl/tests/local-vec-off/: generated_test.go
pkg/cli/: BUILD.bazel  flags_util.go  zip_table_registry.go
pkg/clusterversion/: setting.go
pkg/cmd/cockroach-oss/: BUILD.bazel
pkg/cmd/dev/: builder.go
pkg/server/: BUILD.bazel  config.go  server.go  status.go  status_test.go
pkg/server/serverpb/: status.proto
pkg/sql/logictest/testdata/logic_test/: decode_descriptor
pkg/sql/logictest/tests/fakedist/: generated_test.go
pkg/sql/logictest/tests/fakedist-disk/: generated_test.go
pkg/sql/logictest/tests/fakedist-vec-off/: generated_test.go
pkg/sql/logictest/tests/local-legacy-schema-changer/: generated_test.go
pkg/sql/sem/builtins/: builtins.go  fixed_oids.go
pkg/storage/: BUILD.bazel  mvcc.go  pebble.go
pkg/ui/: .gitignore
pkg/ui/distccl/: BUILD.bazel  distccl.go
pkg/ui/distoss/: BUILD.bazel
pkg/ui/workspaces/cluster-ui/: package.json  webpack.config.js
pkg/ui/workspaces/crdb-api-client/: package.json
pkg/ui/workspaces/db-console/: webpack.app.js  webpack.vendor.js
(+11 files in other folders)
